<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_pubsub</name>
  <version>0.0.0</version>
  <description>C++ publisher subcriber tutorial</description>
  <maintainer email="hoan.duongmybk852002@hcmut.edu.vn">ngochoan</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>tutorial_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
